<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>

    <string name="ipaddress">IP Address:</string>

    <string name="connect">Connect</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="portText">Port:</string>

    <string name="manage_connection">Manage Connection</string>
    <string name="drive">Drive</string>
    <string name="header">Header</string>

    <string name="app_name">Android Nao Controller</string>

    <string name="black">#000000</string>
    <string name="Forward">Forward</string>
    <string name="StrafeLeft">Strafe Left</string>
    <string name="StrafeRight">Strafe Right</string>
    <string name="TurnRight">Turn Right</string>
    <string name="TurnLeft">Turn Left</string>
    <string name="Stop">Stop</string>
    <string name="ControllerOutput">idle</string>
    <string name="OK">OK</string>
    <string name="error">Error</string>
    <string name="ip_failure">The IP address you entered could not be reached! Please try again.</string>
    <string name="StopCommand">s</string>
    <string name="WalkCommand">w</string>
    <string name="TurnLeftCommand">l</string>
    <string name="TurnRightCommand">r</string>
    <string name="StepLeftCommand">sl</string>
    <string name="StepRightCommand">sr</string>
    <string name="StiffenCommand">sj</string>
    <string name="UnstiffenCommand">u</string>
    <string name="StandCommand">su</string>
    <string name="SitCommand">sd</string>
    <string name="VideoCommand">v</string>
    <string name="EStop">e</string>
    <string name="EStopButton">Emergency Stop</string>
    <string name="VideoButton">Video Toggle</string>
    <string name="RobotViewImageContent">Robot View </string>
    <string name="message">Message</string>
    <string name="SayMessage">Say Message</string>
    <string name="walkSpeed">Walk Speed</string>
</resources>
