<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DashboardActivity" >

    <TextView
        android:id="@+id/outputTextView1"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignTop="@+id/button2"
        android:onClick="stepLeftOnClick"
        android:text="@string/StrafeLeft"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button02"
        android:layout_alignTop="@+id/button2"
        android:onClick="stepRightOnClick"
        android:text="@string/StrafeRight"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="forwardOnClick"
        android:text="@string/Forward"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="stopOnClick"
        android:text="@string/Stop"
        android:textColor="@color/StopButton"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/outputTextView1"
        android:layout_alignTop="@+id/button1"
        android:onClick="turnRightOnClick"
        android:text="@string/TurnRight"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/outputTextView1"
        android:onClick="turnLeftOnClick"
        android:text="@string/TurnLeft"
        android:textSize="12sp" />

    <Button
        android:id="@+id/ButtonEStop"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button1"
        android:onClick="eStopOnClick"
        android:text="@string/EStopButton"
        android:textColor="@color/StopButton"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cmdVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonEStop"
        android:layout_alignBottom="@+id/ButtonEStop"
        android:layout_alignRight="@+id/outputTextView1"
        android:onClick="updateVideo"
        android:text="@string/VideoButton" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmdVideo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/RobotViewImageContent"
        android:maxHeight="480dp"
        android:maxWidth="640dp"
        android:minHeight="480dp"
        android:minWidth="640dp"
        android:src="@drawable/nao_head" />

    <EditText
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:hint="@string/message" />

    <Button
        android:id="@+id/cmdSayMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="14dp"
        android:onClick="sayMessage"
        android:text="@string/SayMessage" />

    <TextView
        android:id="@+id/txtSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/motionSpeed"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginBottom="14dp"
        android:text="@string/walkSpeed" />

    <SeekBar
        android:id="@+id/motionSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:max="@integer/maxVal"
        android:progress="@integer/progressVal" />
        
</RelativeLayout>
