<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConnectionActivity" >

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="204dp"
        android:onClick="startNewActv"
        android:text="@string/connect" />

    <EditText
        android:id="@+id/ipAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/portLabel"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone"
        android:textColor="@color/White" >

        <requestFocus />
    </EditText>
    
        <EditText
        android:id="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnConnect"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone"
        android:textColor="@color/White" >
    </EditText>

    <TextView
        android:id="@+id/ipAddrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ipAddr"
        android:layout_centerHorizontal="true"
        android:text="@string/ipaddress"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />
    
    <TextView
        android:id="@+id/portLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/port"
        android:layout_centerHorizontal="true"
        android:text="@string/portText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

</RelativeLayout>